--- a/hyprland.conf
+++ b/hyprland.conf
@@ -84,7 +84,7 @@ input {
     natural_scroll = true
     tap-to-click = true
     drag_lock = true
-    disable_while_typing = false
+    disable_while_typing = true
   }
 
   #sensitivity = 0.0 # -1.0 - 1.0, 0 means no modification
